force-app/main/default/objects/bpats__ATS_Template__c/bpats__ATS_Template__c.object-meta.xml
<CustomObject>
    <description>ATS Template is a record that creates a relationship between a unique set of ATS Stage Templates that can be assigned to a Job</description>
    <label>ATS Template</label>
    <nameField>
        <label>ATS Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ATS Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>