force-app/main/default/objects/bpats__ATS_Template__c/fields/bpats__Filter_Criteria__c.field-meta.xml
<CustomField>
    <fullName>bpats__Filter_Criteria__c</fullName>
    <label>Filter Criteria</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>