force-app/main/default/objects/bpats__ATS_Template__c/fields/bpats__Is_Default__c.field-meta.xml
<CustomField>
    <fullName>bpats__Is_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Default</label>
    <type>Checkbox</type>
</CustomField>