force-app/main/default/objects/bpats__ATS_Template__c/fields/bpats__Priority__c.field-meta.xml
<CustomField>
    <fullName>bpats__Priority__c</fullName>
    <inlineHelpText>Please enter a number to represent the priority of this template. When a job matches multiple template criteria, the record with the higher priority number will be used.</inlineHelpText>
    <label>Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>