force-app/main/default/objects/bpats__ATS_Template__c/validationRules/bpats__Check_for_Filter_Criteria.validationRule-meta.xml
<ValidationRule>
    <fullName>bpats__Check_for_Filter_Criteria</fullName>
    <active>true</active>
    <description>If Template Assignment Criteria i.e., Filter Criteria field is Empty then Template should not be in State Active.</description>
    <errorConditionFormula>(ISNULL( bpats__Filter_Criteria__c  )   ||  ISBLANK( bpats__Filter_Criteria__c ) )  &amp;&amp;  bpats__Is_Active__c = true</errorConditionFormula>
    <errorMessage>To Activate this Template please add a &quot;Template Assignment Criteria&quot;</errorMessage>
</ValidationRule>