force-app/main/default/objects/bpats__ATS_Template__c/listViews/bpats__All.listView-meta.xml
<ListView>
    <fullName>bpats__All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>